--- a/back-office/assets/styles/custom.scss
+++ b/back-office/assets/styles/custom.scss
@@ -8,7 +8,7 @@ body {
 }
 
 footer {
-  background-color: red;
+  background-color: red; //TODO CHANGE
   flex-shrink: 0;
 }
 
@@ -17,15 +17,6 @@ footer {
   padding-left: 0;
 }
 
-.full-height {
-  height: 100%;
-}
-.full-width {
-  width: 100%;
-}
-
 .content-wrapper {
   padding: 20px;
 }
-
-
